--- a/OtherSection.html
+++ b/OtherSection.html
@@ -137,7 +137,7 @@
     <!-- Navbar -->
     <div class="w3-top">
         <div class="w3-bar w3-black w3-card">
-            <a href="main.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+            <a href="index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
             <a href="SampleRequest.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">SAMPLE REQUEST</a>
             <a href="ContactUs.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
             <div class="w3-dropdown-hover w3-hide-small">
