--- a/SampleRequest.html
+++ b/SampleRequest.html
@@ -193,7 +193,7 @@
 <div class="container">
     <!-- Header Text -->
     <h1>Sample Request</h1>
-    <p>Please fill out the following form to request a product sample. Requests will be processed in the order they are received. A confirmation email will be sent upon submission. You should receive your sample within two weeks.</p>
+    <p>Please fill out the following form to request a product sample. A confirmation email will be sent upon submission. You may also call or email us!</p>
     
     <!-- Form -->
     <form action="https://portal.colormaker.com/admin/process-form" method="POST" id="sample-request-form">
