--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {font-family: "Lato", sans-serif}
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="toggleNav()" title="Toggle Navigation Menu">
       <i class="fa fa-bars"></i>
     </a>
-    <a href="main.html" class="w3-bar-item w3-button w3-padding-large">Home</a>
+    <a href="index.html" class="w3-bar-item w3-button w3-padding-large">Home</a>
     <a href="SampleRequest.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Sample Request</a>
     <a href="ContactUs.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
     <div class="w3-dropdown-hover w3-hide-small">
@@ -57,7 +57,7 @@ body {font-family: "Lato", sans-serif}
     <!-- Close Button -->
     <a href="javascript:void(0)" class="close-btn" onclick="toggleNav()">Close <i class="fa fa-close"></i></a>
     <div class="menu-items">
-      <a href="main.html" class="w3-bar-item w3-button w3-padding-large">Home</a>
+      <a href="index.html" class="w3-bar-item w3-button w3-padding-large">Home</a>
       <a href="SampleRequest.html" class="w3-bar-item w3-button w3-padding-large">Sample Request</a>
       <a href="ContactUs.html" class="w3-bar-item w3-button w3-padding-large">Contact</a>
 
@@ -77,7 +77,7 @@ body {font-family: "Lato", sans-serif}
       <div class="dropdown">
         <a href="javascript:void(0)" class="dropdown-toggle w3-bar-item w3-button w3-padding-large" onclick="toggleDropdown('IngredientsDropdown')">Ingredients <i class="fa fa-caret-down"></i></a>
         <div id="IngredientsDropdown" class="dropdown-menu">
-          <a href="" class="w3-bar-item w3-button w3-padding-large">Ingredient</a>
+          <a href="NaturalVsSynthetic.html" class="w3-bar-item w3-button w3-padding-large">Ingredient</a>
           <a href="" class="w3-bar-item w3-button w3-padding-large">Ingredient</a>
           <a href="" class="w3-bar-item w3-button w3-padding-large">Ingredient</a>
           <a href="" class="w3-bar-item w3-button w3-padding-large">Ingredient</a>
