--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ body {font-family: "Lato", sans-serif}
       <div class="dropdown">
         <a href="javascript:void(0)" class="dropdown-toggle w3-bar-item w3-button w3-padding-large" onclick="toggleDropdown('IngredientsDropdown')">Ingredients <i class="fa fa-caret-down"></i></a>
         <div id="IngredientsDropdown" class="dropdown-menu">
-          <a href="NaturalVsSynthetic.html" class="w3-bar-item w3-button w3-padding-large">Ingredient</a>
+          <a href="NaturalVsSynthetic.html" class="w3-bar-item w3-button w3-padding-large">Natural Vs Synthetic</a>
           <a href="" class="w3-bar-item w3-button w3-padding-large">Ingredient</a>
           <a href="" class="w3-bar-item w3-button w3-padding-large">Ingredient</a>
           <a href="" class="w3-bar-item w3-button w3-padding-large">Ingredient</a>
