--- a/NaturalVsSynthetic.html
+++ b/NaturalVsSynthetic.html
@@ -158,7 +158,7 @@
         <!-- Title Section -->
         <div class="text-content">
             <div class="title-section" style="margin-top: 40px;">
-                <h1>Natural Vs Synthetic</h1>
+                <h1>Natural vs Synthetic</h1>
             </div>
     
             <div class="text-section">
