--- a/index.html
+++ b/index.html
@@ -25,27 +25,35 @@ body {font-family: "Lato", sans-serif}
     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">Information <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
-        <a href="" class="w3-bar-item w3-button">Our Story</a>
-          <a href="" class="w3-bar-item w3-button">Staff</a>
-          <a href="" class="w3-bar-item w3-button">FAQ</a>
-          <a href="" class="w3-bar-item w3-button">Partners</a>
-          <a href="" class="w3-bar-item w3-button">Privacy Notice</a>
-          <a href="" class="w3-bar-item w3-button">Regulation And Labeling</a>
+        <a href="ourstory.html" class="w3-bar-item w3-button">Our Story</a>
+          <a href="staff.html" class="w3-bar-item w3-button">Staff</a>
+          <a href="FAQ.html" class="w3-bar-item w3-button">FAQ</a>
+          <a href="Partners.html" class="w3-bar-item w3-button">Partners</a>
+          <a href="PrivacyNotice.html" class="w3-bar-item w3-button">Privacy Notice</a>
+          <a href="Regulations.html" class="w3-bar-item w3-button">Regulation And Labeling</a>
       </div>
     </div>
     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">Ingredients <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
         <a href="NaturalVsSynthetic.html" class="w3-bar-item w3-button">Natural vs Synthetic</a>
-          <a href="" class="w3-bar-item w3-button">Ingredient</a>
-          <a href="" class="w3-bar-item w3-button">Ingredient</a>
-          <a href="" class="w3-bar-item w3-button">Ingredient</a>
-          <a href="" class="w3-bar-item w3-button">Ingredient</a>
-          <a href="" class="w3-bar-item w3-button">Ingredient</a>
-          <a href="" class="w3-bar-item w3-button">Ingredient</a>
-          <a href="" class="w3-bar-item w3-button">Ingredient</a>
-          <a href="" class="w3-bar-item w3-button">Ingredient</a>
-          <a href="" class="w3-bar-item w3-button">Ingredient</a>
+          <a href="NaturalColors.html" class="w3-bar-item w3-button">Natural Colors</a>
+          <a href="Annatto.html" class="w3-bar-item w3-button">Annatto</a>
+          <a href="Beet.html" class="w3-bar-item w3-button">Beet</a>
+          <a href="Beta-Carotene.html" class="w3-bar-item w3-button">Beta-Carotene</a>
+          <a href="Caramel.html" class="w3-bar-item w3-button">Caramel</a>
+          <a href="Carmine.html" class="w3-bar-item w3-button">Carmine</a>
+          <a href="Grape.html" class="w3-bar-item w3-button">Grape</a>
+          <a href="Paprika.html" class="w3-bar-item w3-button">Paprika</a>
+          <a href="Saffron.html" class="w3-bar-item w3-button">Saffron</a>
+          <a href="Turmeric.html" class="w3-bar-item w3-button">Turmeric</a>
+          <a href="Chlorophyll.html" class="w3-bar-item w3-button">Chlorophyll</a>
+          <a href="Lycopene.html" class="w3-bar-item w3-button">Lycopene</a>
+          <a href="TitaniumDioxide.html" class="w3-bar-item w3-button">Titanium Dioxide</a>
+          <a href="PurpleCarrot.html" class="w3-bar-item w3-button">Purple Carrot & Purple Sweet Potato</a>
+          <a href="RedCabbage.html" class="w3-bar-item w3-button">Red Cabbage & Red Raddish</a>
+          <a href="IronOxide.html" class="w3-bar-item w3-button">Iron Oxide</a>
+          <a href="Spirulina.html" class="w3-bar-item w3-button">Spirulina</a>
       </div>
     </div>
   </div>
@@ -78,15 +86,23 @@ body {font-family: "Lato", sans-serif}
         <a href="javascript:void(0)" class="dropdown-toggle w3-bar-item w3-button w3-padding-large" onclick="toggleDropdown('IngredientsDropdown')">Ingredients <i class="fa fa-caret-down"></i></a>
         <div id="IngredientsDropdown" class="dropdown-menu">
           <a href="NaturalVsSynthetic.html" class="w3-bar-item w3-button w3-padding-large">Natural vs Synthetic</a>
-          <a href="" class="w3-bar-item w3-button w3-padding-large">Ingredient</a>
-          <a href="" class="w3-bar-item w3-button w3-padding-large">Ingredient</a>
-          <a href="" class="w3-bar-item w3-button w3-padding-large">Ingredient</a>
-          <a href="" class="w3-bar-item w3-button w3-padding-large">Ingredient</a>
-          <a href="" class="w3-bar-item w3-button w3-padding-large">Ingredient</a>
-          <a href="" class="w3-bar-item w3-button w3-padding-large">Ingredient</a>
-          <a href="" class="w3-bar-item w3-button w3-padding-large">Ingredient</a>
-          <a href="" class="w3-bar-item w3-button w3-padding-large">Ingredient</a>
-          <a href="" class="w3-bar-item w3-button w3-padding-large">Ingredient</a>
+          <a href="" class="w3-bar-item w3-button">Natural Colors</a>
+          <a href="" class="w3-bar-item w3-button">Annatto</a>
+          <a href="" class="w3-bar-item w3-button">Beet</a>
+          <a href="" class="w3-bar-item w3-button">Beta-Carotene</a>
+          <a href="" class="w3-bar-item w3-button">Caramel</a>
+          <a href="" class="w3-bar-item w3-button">Carmine</a>
+          <a href="" class="w3-bar-item w3-button">Grape</a>
+          <a href="" class="w3-bar-item w3-button">Paprika</a>
+          <a href="" class="w3-bar-item w3-button">Saffron</a>
+          <a href="" class="w3-bar-item w3-button">Turmeric</a>
+          <a href="" class="w3-bar-item w3-button">Chlorophyll</a>
+          <a href="" class="w3-bar-item w3-button">Lycopene</a>
+          <a href="" class="w3-bar-item w3-button">Titanium Dioxide</a>
+          <a href="" class="w3-bar-item w3-button">Purple Carrot & Purple Sweet Potato</a>
+          <a href="" class="w3-bar-item w3-button">Red Cabbage & Red Raddish</a>
+          <a href="" class="w3-bar-item w3-button">Iron Oxide</a>
+          <a href="" class="w3-bar-item w3-button">Spirulina</a>
         </div>
       </div>
     </div>
